# mapping-walker-web

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/mapping_walker_web/: main.py  models.py
backend/tests/: test_mapping_walker_web.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: LoadingSpinner.jsx  Markdown.jsx  PipelineRunForm.jsx  PipelineRunForm.module.css  PipelineRunResults.jsx  PipelineRunResults.module.css
